jira automation and more

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -48,7 +48,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Evgenia\AppData\Local\Temp\testng-eclipse--2010026587\testng-customsuite.xml</span>
+                    <span>C:\Users\Evgenia\AppData\Local\Temp\testng-eclipse--773808587\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -90,7 +90,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -101,7 +101,17 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="DynamicJson" class="method navigator-link" hash-for-method="addBook">addBook</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="DynamicJson" class="method navigator-link" hash-for-method="addBook(dsddsasfde, 222222gfdfgtr)">addBook(dsddsasfde, 222222gfdfgtr)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="DynamicJson" class="method navigator-link" hash-for-method="addBook(dfdfasfde, 33333diutr)">addBook(dfdfasfde, 33333diutr)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="DynamicJson" class="method navigator-link" hash-for-method="addBook(tessfdfdasfde, 11111utr)">addBook(tessfdfdasfde, 11111utr)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -124,9 +134,26 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="addBook">
-                  </a> <!-- addBook -->
+                  <a name="addBook(dsddsasfde, 222222gfdfgtr)">
+                  </a> <!-- addBook(dsddsasfde, 222222gfdfgtr) -->
                   <span class="method-name">addBook</span>
+                  <span class="parameters">(dsddsasfde, 222222gfdfgtr)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="addBook(dfdfasfde, 33333diutr)">
+                  </a> <!-- addBook(dfdfasfde, 33333diutr) -->
+                  <span class="method-name">addBook</span>
+                  <span class="parameters">(dfdfasfde, 33333diutr)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="addBook(tessfdfdasfde, 11111utr)">
+                  </a> <!-- addBook(tessfdfdasfde, 11111utr) -->
+                  <span class="method-name">addBook</span>
+                  <span class="parameters">(tessfdfdasfde, 11111utr)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -134,7 +161,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Evgenia\AppData\Local\Temp\testng-eclipse--2010026587\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Evgenia\AppData\Local\Temp\testng-eclipse--773808587\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -183,16 +210,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'addBook')
 data.setCell(0, 2, 'DynamicJson')
-data.setCell(0, 3, 3395);
+data.setCell(0, 3, 3583);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'addBook')
+data.setCell(1, 2, 'DynamicJson')
+data.setCell(1, 3, 669);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'addBook')
+data.setCell(2, 2, 'DynamicJson')
+data.setCell(2, 3, 647);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 3 seconds</span>
+              <span class="suite-total-time">Total running time: 4 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -220,8 +255,16 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">DynamicJson</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">addBook</span>
+                <span class="method-name">addBook(tessfdfdasfde, 11111utr)</span>
                 <span class="method-start">0 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">addBook(dsddsasfde, 222222gfdfgtr)</span>
+                <span class="method-start">3585 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">addBook(dfdfasfde, 33333diutr)</span>
+                <span class="method-start">4233 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
