--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a0aa7d">  <td>23/06/29 15:48:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DynamicJson.addBook()[pri:0, instance:DynamicJson@57a78e3]">addBook</td> 
-  <td>main@771418758</td>   <td></td> </tr>
+<tr bgcolor="a0aa7d">  <td>23/07/03 14:01:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DynamicJson.addBook(java.lang.String, java.lang.String)[pri:0, instance:DynamicJson@cecf639]">addBook</td> 
+  <td>main@1293226111</td>   <td></td> </tr>
+<tr bgcolor="a0aa7d">  <td>23/07/03 14:01:11</td>   <td>3584</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DynamicJson.addBook(java.lang.String, java.lang.String)[pri:0, instance:DynamicJson@cecf639]">addBook</td> 
+  <td>main@1293226111</td>   <td></td> </tr>
+<tr bgcolor="a0aa7d">  <td>23/07/03 14:01:12</td>   <td>4232</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DynamicJson.addBook(java.lang.String, java.lang.String)[pri:0, instance:DynamicJson@cecf639]">addBook</td> 
+  <td>main@1293226111</td>   <td></td> </tr>
 </table>
